force-app/main/default/objects/EventTypeColor__mdt/EventTypeColor__mdt.object-meta.xml
<CustomObject>
    <label>EventTypeColor</label>
    <pluralLabel>EventTypeColors</pluralLabel>
</CustomObject>