force-app/main/default/objects/EventTypeColor__mdt/fields/ColorCode__c.field-meta.xml
<CustomField>
    <fullName>ColorCode__c</fullName>
    <description>provide hexadecimal color code here to display this as a tile on calendar</description>
    <inlineHelpText>provide hexadecimal color code here to display this as a tile on calendar</inlineHelpText>
    <label>ColorCode</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>